--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="public/css/style.css"><link>
+    <link rel="stylesheet" href="./public/css/style.css"><link>
     <title>Document</title>
 </head>
 <body>
     <top-container>
-        <div id="board"></div>
+        <div id="board-container">
+            <div id="board"></div>
+        </div>
     </top-container>
 
     <script src="script.js"></script>
