add experiments in script2 and script2 add classes for next development

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             <div id="board"></div>
         </div>
     </top-container>
-
+    <script src="Player.js"></script>
+    <script src="TeamFactory.js"></script>
+    <script src="main.js"></script>
     <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
