script 4 resolves target changes should apply this logic to player avatars

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="Player.js"></script>
     <script src="TeamFactory.js"></script>
     <script src="main.js"></script>
-    <script src="script.js"></script>
+    <script src="script4.js"></script>
     <!-- <script src="script.js"></script> -->
 </body>
 </html>
