--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+        <div id="box" style="position: absolute; top: 10px; left: 10px; height: 50px; width: 50px; background-color: red;"></div>
     <top-container>
         <div id="board-container">
             <div id="board"></div>
@@ -17,6 +18,7 @@
     <script src="TeamFactory.js"></script>
     <script src="main.js"></script>
     <script src="board.js"></script>
+    <script src="game.js"></script>
     <!-- <script src="script.js"></script> -->
 </body>
 </html>
