--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-        <div id="box" style="position: absolute; top: 10px; left: 10px; height: 50px; width: 50px; background-color: red;"></div>
+        <div id="box" style="position: absolute; top: 10px; left: 10px; height: 50px; width: 50px; background-color: #555;">
+            <p id="readout"></p>
+        </div>
     <top-container>
         <div id="board-container">
             <div id="board"></div>
