avatar class added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
     </top-container>
     <script src="Player.js"></script>
+    <script src="PlayerA.js"></script>
     <script src="TeamFactory.js"></script>
     <script src="main.js"></script>
     <script src="board.js"></script>
