change scss to incorporate new npc subclass of player

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </top-container>
     <script src="Player.js"></script>
     <script src="PlayerA.js"></script>
+    <script src="NPC.js"></script>
     <script src="TeamFactory.js"></script>
     <script src="main.js"></script>
     <script src="board.js"></script>
