change the way data gets to apply vector and add opponent-actions

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         </div>
     </top-container>
     <script src="Player.js"></script>
-    <script src="PlayerA.js"></script>
     <script src="NPC.js"></script>
     <script src="TeamFactory.js"></script>
     <script src="main.js"></script>
     <script src="board.js"></script>
-    <script src="game.js"></script>
+    <script src="loop.js"></script>
     <!-- <script src="script.js"></script> -->
 </body>
 </html>
