add readout with variable font anim

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-        <div id="box" style="position: absolute; top: 10px; left: 10px; height: 50px; width: 50px; background-color: #555;">
-            <p id="readout"></p>
+        <div id="box">
+            <div id="readout">Blip-Bol</div>
         </div>
     <top-container>
         <div id="board-container">
