--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./public/css/style2.css"><link>
+    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
